--- a/tex/1-wstep/3-struktura-dokumentu.tex
+++ b/tex/1-wstep/3-struktura-dokumentu.tex
@@ -1,3 +1,3 @@
-\subsection{Struktura dokumentu}
+\subsection{Struktura pracy}
 
-Dokument został podzielony na 6 sekcji. Druga sekcja przedstawia bardziej szczegółowo niż we wstępie badania podjęte przez ENI. Stanowi ona nieco wprowadzenie teoretyczne oraz pojęciowe, aby ułatwić przekaz w dalszej części pracy. Sekcja trzecia zawiera opis proponowanej architektury. Sekcja czwarta opisuje implementację PoC platformy oraz napotkane wyzwania podczas formułowania architektury, które celowo zostały zebrane w jedno miejsce i umieszczone oddzielnie w celu łatwiejszej lektury. Sekcja numer pięć przedstawia użycie platformy w praktyce przy okazji stanowiąc jej test. Na koniec, w sekcji szóstej przeprowadzono analizę zaproponowanej architektury, jej możliwości oraz ograniczenia oraz wskazano kierunki potencjalnego rozwoju.
+Praca została podzielona na 6 rozdziałów. Drugi rozdział przedstawia bardziej szczegółowo niż we wstępie badania podjęte przez ENI. Stanowi on wprowadzenie teoretyczne oraz pojęciowe, aby ułatwić przekaz w dalszej części pracy. Rozdział trzeci zawiera opis proponowanej architektury. Rozdział czwarty opisuje implementację PoC platformy oraz napotkane wyzwania podczas formułowania architektury, które celowo zostały zebrane w jedno miejsce i umieszczone oddzielnie w celu łatwiejszej lektury. Rozdział numer pięć przedstawia użycie platformy w praktyce przy okazji stanowiąc jej test. Na koniec, w rozdziale szóstym przeprowadzono analizę zaproponowanej architektury, jej możliwości oraz ograniczenia oraz wskazano kierunki potencjalnego rozwoju.
