--- a/tex/2-stan-wiedzy/1-wstep.tex
+++ b/tex/2-stan-wiedzy/1-wstep.tex
@@ -1,3 +1,3 @@
 \subsection{Wstęp}
 
-Sekcja ta stanowi krótki wstęp historyczny problemu jakiego podejmuje się praca oraz przytacza kluczowe znaleziska z powiązanej literatury w celu identyfikacji luki badawczej. 
+Rozdział ten stanowi krótki wstęp historyczny problemu jakiego podejmuje się praca oraz przytacza kluczowe znaleziska z powiązanej literatury w celu identyfikacji luki badawczej. 
