--- a/tex/3-architektura/2-wymagania-i-zalozenia.tex
+++ b/tex/3-architektura/2-wymagania-i-zalozenia.tex
@@ -2,7 +2,7 @@
 
 \subsubsection{Wstęp}
 
-Niniejsza sekcja opisuje proces formułowania wymagań i założeń na platformę Lupus, przedstawiając przy tym aspekt badawczy pracy, który w całości został zebrany w jedno miejsce w celu łatwiejszego zobrazowania tego zagadnienia. Następne podsekcje tej sekcji przedstawiają architekturę w stanie końcowym, abstrahując od poniższej dyskusji. Taki podział ma nadzieję przynieść łatwiejszy odbiór czytelnikowi. Opis w tej podsekcji opiera się na analizach architektur systemów zarządzania i pętli sterowania przeprowadzonym w sekcji poprzedniej.
+Niniejsy rozdział opisuje proces formułowania wymagań i założeń na platformę Lupus, przedstawiając przy tym aspekt badawczy pracy, który w całości został zebrany w jedno miejsce w celu łatwiejszego zobrazowania tego zagadnienia. Następne podrozdziały tego rozdziału przedstawiają architekturę w stanie końcowym, abstrahując od poniższej dyskusji. Taki podział ma nadzieję przynieść łatwiejszy odbiór czytelnikowi. Opis w tym podrozdziale opiera się na analizach architektur systemów zarządzania i pętli sterowania przeprowadzonym w rozdziale poprzednim.
 
 \subsubsection{Wymagania ogólne}
 
@@ -28,7 +28,7 @@ Platforma musi się wpisać w architekturę referencyjna ETSI ZSM oraz CLADRA, d
 
 \subsubsection{Wymagania na modelowanie pętli}
 
-Punktem wyjścia jest możliwość zamodelowania dowolnej zamkniętej pętli sterowania przeanalizowanej w \hyperlink{sec:25}{podsekcji 2.4}. Przede wszystkim wymagane jest, aby zapewnić  mechanizmów feedback'u i feedforward, co oznacza po prostu komunikacje pomiędzy elemetami. Wymagane jest też wsparcie wszystkich opisanych typów pętli takich jak hierarchiczne, rozproszone czy federacyjne. Cechy adaptywności oraz kognitywności pętli nie tyczą się samej platformy, a raczej są implementowane w komponentach pętli wykonujących jej logikę obliczeniową (np. komponenty sztucznej inteligencji). Przykładowo w architekturze ETSI ZSM, te aspekty będą odzwierciedlone w serwisach zarządzania. Należy, więc w tym momencie zaznaczyć, iż cześć obliczeniowa logiki pętli jest delegowana przez platformę do komponentów zewnętrznych, które logicznie uruchomione są w innym miejscu, tak jak definiują to architektury referencyjne ETSI ZSM oraz CLADRA. Porównanie pętli OODA z MAPE-K pokazuje nam, że modelowane pętle mogą być zarówno sekwencyjne jak i nie. Sekwencyjność polega na wykonaniu operacji danego elementu jeden po drugim, brak sekwencyjność oznacza współbieżność elementów. W projekcie platformy przyjmujemy, iż współbieżność jest bardziej ogólna i na jej podstawie da się zaimplementować sekwencyjność. Sekwencyjność w współbieżnie działających elementach można osiągać poprzez pobudzanie ich w ustanowionej kolejności. Z kolei pętle niesekwencyjne działają cały czas w oczekiwaniu na otrzymanie jednego z sygnałów: feedback, feedforward lub sygnału ze środowiska zewnętrznego. Dlatego definiujemy wymaganie, iż element jest "pobudzany" danymi, co również wpisuje się w pryncypia architektury ZSM. Jak widzimy w pętli OODA, dany element pętli może pobudzać wiele innych elementów, niekoniecznie jeden, a w przypadku niektórych elementów możliwa też jest komunikacja ze środowiskiem zewnętrznym. Wnętrze elementu "Orient" pętli OODA posiada wewnętrzną skomplikowaną strukturę, może wykonywać wiele operacji (w tym wewnętrzną pętle). Wewnątrz elementu "Decide" widać podjęcie decyzji, które zmienia przebieg pętli. Każda iteracja pętli może mieć inny przebieg. 
+Punktem wyjścia jest możliwość zamodelowania dowolnej zamkniętej pętli sterowania przeanalizowanej w \hyperlink{sec:25}{podrozdziale 2.4}. Przede wszystkim wymagane jest, aby zapewnić  mechanizmów feedback'u i feedforward, co oznacza po prostu komunikacje pomiędzy elemetami. Wymagane jest też wsparcie wszystkich opisanych typów pętli takich jak hierarchiczne, rozproszone czy federacyjne. Cechy adaptywności oraz kognitywności pętli nie tyczą się samej platformy, a raczej są implementowane w komponentach pętli wykonujących jej logikę obliczeniową (np. komponenty sztucznej inteligencji). Przykładowo w architekturze ETSI ZSM, te aspekty będą odzwierciedlone w serwisach zarządzania. Należy, więc w tym momencie zaznaczyć, iż cześć obliczeniowa logiki pętli jest delegowana przez platformę do komponentów zewnętrznych, które logicznie uruchomione są w innym miejscu, tak jak definiują to architektury referencyjne ETSI ZSM oraz CLADRA. Porównanie pętli OODA z MAPE-K pokazuje nam, że modelowane pętle mogą być zarówno sekwencyjne jak i nie. Sekwencyjność polega na wykonaniu operacji danego elementu jeden po drugim, brak sekwencyjność oznacza współbieżność elementów. W projekcie platformy przyjmujemy, iż współbieżność jest bardziej ogólna i na jej podstawie da się zaimplementować sekwencyjność. Sekwencyjność w współbieżnie działających elementach można osiągać poprzez pobudzanie ich w ustanowionej kolejności. Z kolei pętle niesekwencyjne działają cały czas w oczekiwaniu na otrzymanie jednego z sygnałów: feedback, feedforward lub sygnału ze środowiska zewnętrznego. Dlatego definiujemy wymaganie, iż element jest "pobudzany" danymi, co również wpisuje się w pryncypia architektury ZSM. Jak widzimy w pętli OODA, dany element pętli może pobudzać wiele innych elementów, niekoniecznie jeden, a w przypadku niektórych elementów możliwa też jest komunikacja ze środowiskiem zewnętrznym. Wnętrze elementu "Orient" pętli OODA posiada wewnętrzną skomplikowaną strukturę, może wykonywać wiele operacji (w tym wewnętrzną pętle). Wewnątrz elementu "Decide" widać podjęcie decyzji, które zmienia przebieg pętli. Każda iteracja pętli może mieć inny przebieg. 
 
 Tak jak wskazuje \cite{fallon2019} wyrażanie modelu pętli powinno być zestandaryzowane i ujednolicone, tak aby zapoznanie się z jedną notacją lub językiem pozwalało na jej wielokrotne użycie w celu modelowania wielu różnych pętli sterowania. Użycie notacji nie powinno wymagać wyspecjalizowanej wiedzy technicznej, aby zwiększyć potencjalne grono użytkowników platformy. W idealnym przypadku platforma oferuje interfejs graficzny w celu łatwiejszego modelowania pętli, który pod spodem dokonuje translacji na zestandaryzowaną notację. Element wykonawczy, interpretujący notację, w której wyrażone jest workflow pętli powinien oraz sama notacji powinny być ogólne, nie narzucać żadnej logiki lub schematu pętli. Jedna pętla sterowania zazwyczaj dedykowana jest dla jednej funkcji zarządzania, jednego systemu zarządzanego lub domeny zarządzania, należy uogólnić to pojęcie. Z racji, że architektury ZSM oraz CLADRA przystosowane są do działania w środowisku wielu dostawców (ang. \textit{multi-vendor environment}) oraz zgodnie z tym co proponuje pętla Focale v3, czyli konwersja danych pobieranych na jednolity wewnętrznie rozumiany model Platforma Lupus również powinna wspierać taką funkcjonalność, z tą różnicą że nie nastawia się na żaden konkretny model. Dodatkowo, systemy zarządzane w celu integracji z Lupus nie powinny być modyfikowane. Należy wprowadzić komponent, który zarówno integruje system zarządzany z Lupus bez jego modyfikacji oraz dokonuje translacji zbieranych danych na format wewnętrzny.
 
@@ -53,7 +53,7 @@ Należy wyjaśnić pojęcia środowiska zewnętrznego oraz komponentów zewnętr
 
 \subsubsection{Wymagania na zarządzanie pętlami}
 
-Wymagania w tej kategorii są bardzo jasno określone i nie wymagają żadnych rozważań, bowiem aspekt zarządzania pętlami został wyczerpująco opisany w architekturze CLADRA jako zestaw funkcjonalności Menadżera Zamkniętych Pętli. Funkcjonalności przedstawiono w formie tabeli w \hyperlink{appendix:11}{Załączniku 11}. Podsekcja definiuje tylko jedno zbiorcze wymaganie, które zawiera w sobie zapewnienie wszystkich funkcjonalności Menadżera Zamkniętych Pętli architektury CLADRA:
+Wymagania w tej kategorii są bardzo jasno określone i nie wymagają żadnych rozważań, bowiem aspekt zarządzania pętlami został wyczerpująco opisany w architekturze CLADRA jako zestaw funkcjonalności Menadżera Zamkniętych Pętli. Funkcjonalności przedstawiono w formie tabeli w \hyperlink{appendix:11}{Załączniku 11}. Podrozdział definiuje tylko jedno zbiorcze wymaganie, które zawiera w sobie zapewnienie wszystkich funkcjonalności Menadżera Zamkniętych Pętli architektury CLADRA:
 
 \begin{enumerate}
     \setcounter{enumi}{15} 
@@ -102,7 +102,7 @@ Pozostaje jeszcze kwestia komunikacji elementów pętli ze środowiskiem zewnęt
 
 Warto też wspomnieć o tym, że obecne w wielu architekturach pętli repozytorium wiedzy może być komponentem zewnętrznym, z którym współpracuje element pętli.
 
-Wprowadzone w niniejszej sekcji pojęcia są szerzej omówione w dalszej części dokumentu. 
+Wprowadzone w niniejsyzym podrozdziale pojęcia są szerzej omówione w dalszej części pracy. 
 
 Poniżej prezentowane jest spełnienie wymagań dotyczących modelowania pęli:
 \begin{enumerate}
@@ -114,7 +114,7 @@ Poniżej prezentowane jest spełnienie wymagań dotyczących modelowania pęli:
     \item Obiekt notacji LupN wskazujący następny komponent pętli pozwala na zdefiniowanie liczby większej od jeden. Następnym komponentem może być albo element pętli albo dowolny serwer HTTP (np. ze środowiska zewnętrznego).
     \item Obiekt notacji LupN opisujący wnętrze elementu jest łańcuchem akcji, które stanowią jego wewnętrzne workflow. Pozwala ono sterować przebiegiem pętli za pomocą akcji typu \texttt{switch}. 
     \item Operator elementu posiada interpreter akcji.
-    \item Modelowanie pętli odbywa się w notacji LupN, której specyfikacja znajduje się w dalszej części dokumentu.
+    \item Modelowanie pętli odbywa się w notacji LupN, której specyfikacja znajduje się w dalszej części pracy.
     \item Kod notacji LupN jest zbiorem obiektów YAML i jest prosty do nauczenia się.
     \item Możliwa jest implementacja programu, który zamieniał by obiekty graficznie zdefiniowane przez użytkownika na kod LupN.
     \item Architektura definiuje komponenty zwane Agentami Translacji, które spełniają to wymaganie.
