--- a/tex/3-architektura/3-pojecia-i-zasady.tex
+++ b/tex/3-architektura/3-pojecia-i-zasady.tex
@@ -1,7 +1,7 @@
 \subsection{Pojęcia i zasady}
 
 \subsubsection{Wstęp}
-Ta podsekcja dokumentuje \hyperlink{def:lupus}{\textbf{Lupus}} w formie wyjaśniania zdefiniowanych na jego potrzeby pojęć, konceptów i zasad. Są one punktem wyjścia do dokładniejszych specyfikacji i zarazem zrozumienia architektury systemu. Sekcja ta zawiera wiele odnośników do definicji znajdujących się w załącznikach i nie wszystkie pojęcia tłumaczone są w tej sekcji.
+Ten rozdział dokumentuje \hyperlink{def:lupus}{\textbf{Lupus}} w formie wyjaśniania zdefiniowanych na jego potrzeby pojęć, konceptów i zasad. Są one punktem wyjścia do dokładniejszych specyfikacji i zarazem zrozumienia architektury systemu. Rozdział ten zawiera wiele odnośników do definicji znajdujących się w załącznikach i nie wszystkie pojęcia tłumaczone są w tym rozdziale.
 
 \subsubsection{Problem zarządzania}
 
