--- a/tex/3-architektura/4-instrukcja-uzycia.tex
+++ b/tex/3-architektura/4-instrukcja-uzycia.tex
@@ -1,6 +1,6 @@
 \subsection{Instrukcja Użycia}
 
-Niniejsza podsekcja prezentuje krótką instrukcję użycia platformy \hyperlink{def:lupus}{\textbf{Lupus}}. \hyperlink{def:uzytkownik}{\textbf{Użytkownikiem}} \hyperlink{def:lupus}{\textbf{Lupus}} może stać się dowolna organizacja bądź pojedyncza osoba. Ważne jest, aby zespół \hyperlink{def:uzytkownik}{\textbf{Użytkownika}} posiadał kompetencje z zakresu tworzenia oprogramowania. W zespole \hyperlink{def:uzytkownik}{\textbf{Użytkownika}} wyróżniamy rolę \hyperlink{def:projektant}{\textbf{Projektanta}}, który jest odpowiedzialny jedynie za projektowanie i wyrażanie \hyperlink{def:workflow-petli}{\textbf{Workflow Pętli}} oraz niekoniecznie – zgodnie z \hyperref[req:8]{Wymaganiem 8} – musi posiadać umiejętności techniczne. 
+Niniejszy podrozdział prezentuje krótką instrukcję użycia platformy \hyperlink{def:lupus}{\textbf{Lupus}}. \hyperlink{def:uzytkownik}{\textbf{Użytkownikiem}} \hyperlink{def:lupus}{\textbf{Lupus}} może stać się dowolna organizacja bądź pojedyncza osoba. Ważne jest, aby zespół \hyperlink{def:uzytkownik}{\textbf{Użytkownika}} posiadał kompetencje z zakresu tworzenia oprogramowania. W zespole \hyperlink{def:uzytkownik}{\textbf{Użytkownika}} wyróżniamy rolę \hyperlink{def:projektant}{\textbf{Projektanta}}, który jest odpowiedzialny jedynie za projektowanie i wyrażanie \hyperlink{def:workflow-petli}{\textbf{Workflow Pętli}} oraz niekoniecznie – zgodnie z \hyperref[req:8]{Wymaganiem 8} – musi posiadać umiejętności techniczne. 
 
 Kiedy dany \hyperlink{def:uzytkownik}{\textbf{Użytkownik}} planuje użyć \hyperlink{def:lupus}{\textbf{Lupus}} jako \hyperlink{def:system-sterowania}{\textbf{Systemu Sterowania}} do rozwiązywania \hyperlink{def:problem-zarzadzania}{\textbf{Problemu Zarządzania}} w swoim \hyperlink{def:system-zarzadzany}{\textbf{Systemie Zarządzanym}}, powinien:
 \begin{enumerate}
@@ -36,7 +36,7 @@ Podczas implementacji należy kierować się specyfikacją \hyperlink{def:interf
 
 Rekomendowanym przez \hyperlink{def:lupus}{\textbf{Lupus}} typem \hyperlink{def:element-zewnetrzny}{\textbf{Elementu Zewnętrznego}} jest serwer \hyperlink{def:opa}{\textbf{Open Policy Agent}}. Przygotowanie w tym wypadku polega na uruchomieniu takiego serwera oraz wgraniu mu odpowiednich polityk. \hyperlink{def:uzytkownik}{\textbf{Użytkownik}} jednakże może wydewelopować dowolny serwer HTTP.
 
-Ostatnim możliwym \hyperlink{def:element-zewnetrzny}{\textbf{Elementem Zewnętrznym}} są \hyperlink{def:funkcje-uzytkownika}{\textbf{Funkcje Użytkownika}}. Są to funkcje w kodzie \textit{kontrolera} zasobu \hyperlink{def:element-lupus}{\textbf{Lupus Element}}, które są definiowane przez \hyperlink{def:uzytkownik}{\textbf{Użytkownika}}. Stanowią one alternatywę dla serwerów HTTP, gdy specjalne wdrażanie takowych może się okazać zbyt kosztowne. Przykładowo, jeśli logika wykonywana przez dany \hyperlink{def:element-zewnetrzny}{\textbf{Element Zewnętrzny}} miałaby mieć tylko kilka linijek kodu, dużo łatwiej użyć \hyperlink{def:funkcje-uzytkownika}{\textbf{Funkcji Użytkownika}}. Ich dokładniejszy opis znajduje się w \hyperref[sec:funkcje-uzytkownika]{Sekcji \ref{sec:funkcje-uzytkownika}}.
+Ostatnim możliwym \hyperlink{def:element-zewnetrzny}{\textbf{Elementem Zewnętrznym}} są \hyperlink{def:funkcje-uzytkownika}{\textbf{Funkcje Użytkownika}}. Są to funkcje w kodzie \textit{kontrolera} zasobu \hyperlink{def:element-lupus}{\textbf{Lupus Element}}, które są definiowane przez \hyperlink{def:uzytkownik}{\textbf{Użytkownika}}. Stanowią one alternatywę dla serwerów HTTP, gdy specjalne wdrażanie takowych może się okazać zbyt kosztowne. Przykładowo, jeśli logika wykonywana przez dany \hyperlink{def:element-zewnetrzny}{\textbf{Element Zewnętrzny}} miałaby mieć tylko kilka linijek kodu, dużo łatwiej użyć \hyperlink{def:funkcje-uzytkownika}{\textbf{Funkcji Użytkownika}}. Ich dokładniejszy opis znajduje się w \hyperref[sec:funkcje-uzytkownika]{podrozdziale \ref{sec:funkcje-uzytkownika}}.
 
 
 \subsubsection{Wyrażenie workflow pętli}
