--- a/tex/4-implementacja/1-wstep.tex
+++ b/tex/4-implementacja/1-wstep.tex
@@ -1,2 +1,2 @@
 \subsection{Wstęp}
-Sekcja ta opisuje wydzieloną z architektury implementację Lupus. Pierwsza jej części opisuje kluczowe mechanizmy Kubernetes, za pomocą których zaimplementowano Lupus. Druga część opowiada o decyzjach podjętych podczas delopmentu platformy. To tu objawia się badawcza natura pracy. 
+Rozdział ten opisuje wydzieloną z architektury implementację Lupus. Pierwsza jej części opisuje kluczowe mechanizmy Kubernetes, za pomocą których zaimplementowano Lupus. Druga część opowiada o decyzjach podjętych podczas developmentu platformy.
