--- a/tex/6-podsumowanie/1-wstep.tex
+++ b/tex/6-podsumowanie/1-wstep.tex
@@ -1,5 +1,5 @@
 \subsection{Wstęp}
-Niniejsza sekcja prezentuje wyzwania z jakimi mierzono się podczas pracy, analizuje wyniki w odniesieniu do założeń i celów pracy, prezentuje możliwe ograniczenia uzyskanych wyników, porównuje je z istniejącymi rozwiązaniami oraz omawia możliwości rozwoju.
+Niniejszy rozdział prezentuje wyzwania z jakimi mierzono się podczas pracy, analizuje wyniki w odniesieniu do założeń i celów pracy, prezentuje możliwe ograniczenia uzyskanych wyników, porównuje je z istniejącymi rozwiązaniami oraz omawia możliwości rozwoju.
 
 \subsection{Wyzwania}
 
@@ -14,7 +14,7 @@ Podczas projektu opisanego w niniejszej pracy napotkano szereg wyzwań, między 
 
 \subsection{Analiza w odniesieniu do założeń} 
 
-Jeśli chodzi o wymagania zdefiniowane w podsekcji \ref{sec:32}, udało się spełnić każde. Nie zaimplementowano jednak interfejsu graficznego, o którym mowa w wymaganiu \ref{req:13}. Uzyskano platformę za pomocą, której można modelować zamknięte pętle sterowania, czemu zresztą dowiodła sekcja \ref{sec:5}. 
+Jeśli chodzi o wymagania zdefiniowane w podrozdziale \ref{sec:32}, udało się spełnić każde. Nie zaimplementowano jednak interfejsu graficznego, o którym mowa w wymaganiu \ref{req:13}. Uzyskano platformę za pomocą, której można modelować zamknięte pętle sterowania, czemu zresztą dowiodł rozdział \ref{sec:5}. 
 
 \subsection{Ograniczenia}
 
