--- a/tex/appendix/10-test-lupn.tex
+++ b/tex/appendix/10-test-lupn.tex
@@ -14,7 +14,7 @@ spec:
   name: "lola"
   elements:
     - name: "demux"
-      descr: "Demuxes Data input into separate elements for each UPF deployment reconcilliation"
+      descr: "Demuxes Data input into separate elements for each UPF"
       actions: 
         - name: "insert1"
           type: insert
