--- a/tex/appendix/3-lupn.tex
+++ b/tex/appendix/3-lupn.tex
@@ -13,7 +13,7 @@ Specyfikacja w formie elektronicznej znajduje się pod linkiem: \url{https://git
     \item odniesienie (lub odniesienia) do \hyperlink{def:agent-egress}{\textbf{Agenta Egress}} jako \hyperlink{def:destynacja}{\textbf{Destynacja}}.
 \end{itemize}
 
-Jak można zauważyć, \texttt{LupN} wyraża \textbf{workflow} na dwóch poziomach: globalnym (czyli \hyperlink{def:workflow-petli}{\textbf{Workflow Elementów Lupus}}) oraz wewnątrz \hyperlink{def:element-lupus}{\textbf{Elementu Lupus}} (czyli \hyperlink{def:workflow-petli}{\textbf{Workflow Akcji}}). Możliwości obu poziomów są do siebie zbliżone, ale ostatecznie różne. Ten dokument również omówi tę kwestię.
+Jak można zauważyć, \texttt{LupN} wyraża \textbf{workflow} na dwóch poziomach: globalnym (czyli \hyperlink{def:workflow-petli}{\textbf{Workflow Elementów Lupus}}) oraz wewnątrz \hyperlink{def:element-lupus}{\textbf{Elementu Lupus}} (czyli \hyperlink{def:workflow-petli}{\textbf{Workflow Akcji}}). Możliwości obu poziomów są do siebie zbliżone, ale ostatecznie różne. Ten załącznik omówi również tę kwestię.
 
 
 Z punktu widzenia implementacji \hyperlink{def:plik-lupn}{\textbf{Plik LupN}} to w rzeczywistości \textit{YAML manifest file} dla \hyperlink{def:zasoby-wlasne}{\textit{Zasobu Własnego}} \hyperlink{def:master}{\textbf{Master}}. Po zaaplikowaniu (ang. \textit{apply}), \hyperlink{def:operator-zasobu-master}{\textbf{Operator Zasobu Master}} uruchamia \hyperlink{def:element-lupus}{\textbf{Elementy Lupus}}, które realizują wyrażone \hyperlink{def:workflow-petli}{\textbf{Workflow Pętli}}.
@@ -22,11 +22,11 @@ Z punktu widzenia implementacji \hyperlink{def:plik-lupn}{\textbf{Plik LupN}} to
 
 Okazuje się, że obiekty YAML w \textbf{YAML manifest files} są pochodnymi struktur Golang (typów Golang), dlatego możemy opisać \hyperlink{def:obiekt-lupn}{\textbf{Obiekty LupN}} na podstawie tych struktur Golang. Obiekty YAML w \hyperlink{def:plik-lupn}{\textbf{Pliku LupN}} są pochodnymi struktur Go, dlatego \hyperlink{def:obiekt-lupn}{\textbf{Obiekty LupN}} możemy opisać na ich podstawie. 
 
-Wymagane jest wcześniejsze zapoznanie się z YAML. Ten dokument nie obejmuje translacji dokonywanej przez Kubernetes między strukturami Go a reprezentacjami obiektów YAML. Serializacja jest wykonywana przez \texttt{controller-gen} i opisana w \textit{Kubebuilder Book}. Tłumaczenie to można łatwo zaobserwować i nauczyć się, analizując przykłady zamieszczone w repozytorium projektu: \url{https://github.com/0x41gawor/lupus/tree/master/examples}
+Wymagane jest wcześniejsze zapoznanie się z YAML. Załącznik nie obejmuje translacji dokonywanej przez Kubernetes między strukturami Go a reprezentacjami obiektów YAML. Serializacja jest wykonywana przez \texttt{controller-gen} i opisana w \textit{Kubebuilder Book}. Tłumaczenie to można łatwo zaobserwować i nauczyć się, analizując przykłady zamieszczone w repozytorium projektu: \url{https://github.com/0x41gawor/lupus/tree/master/examples}
 
 \subsection{Możliwości LupN}
 
-Ze względu na różnice implementacyjne węzłów omówione w sekcji \ref{sec:dwa-rodzaje-workflow}, możliwości \hyperlink{def:workflow-petli}{Workflow Pętli} oraz \hyperlink{def:workflow-akcji}{Workflow Akcji} różnią się od siebie. Sekwencja wykonawcza elementów jest definiowana poprzez obiekty \texttt{next}. Każdy element definiuje listę następnych elementów. Zazwyczaj jest to jeden element. Możliwe są rozgałęzienia (ang. \textit{forks}) czyli lista z większą ilością elementów, ale wtedy zostaje wywołane wiele elementów niezależnie. Nie ma możliwości na zsynchronizowane powrotne złączenie przepływu danych. W przypadku akcji stosowany jest ten sam mechanizm opierający się na definiowaniu następnej akcji, z tym, że tutaj może być ona tylko jedna. Flow akcji interpretowane jest bowiem przez kontroler elementu, który procesuje je po jednej na raz. Z tego powodu możliwe jest sterowanie przepływem (ang. \textit{flow control}), które zostało zaimplementowane jako specjalny typ akcji - \texttt{switch}. 
+Ze względu na różnice implementacyjne węzłów omówione w podrozdziale \ref{sec:dwa-rodzaje-workflow}, możliwości \hyperlink{def:workflow-petli}{Workflow Pętli} oraz \hyperlink{def:workflow-akcji}{Workflow Akcji} różnią się od siebie. Sekwencja wykonawcza elementów jest definiowana poprzez obiekty \texttt{next}. Każdy element definiuje listę następnych elementów. Zazwyczaj jest to jeden element. Możliwe są rozgałęzienia (ang. \textit{forks}) czyli lista z większą ilością elementów, ale wtedy zostaje wywołane wiele elementów niezależnie. Nie ma możliwości na zsynchronizowane powrotne złączenie przepływu danych. W przypadku akcji stosowany jest ten sam mechanizm opierający się na definiowaniu następnej akcji, z tym, że tutaj może być ona tylko jedna. Flow akcji interpretowane jest bowiem przez kontroler elementu, który procesuje je po jednej na raz. Z tego powodu możliwe jest sterowanie przepływem (ang. \textit{flow control}), które zostało zaimplementowane jako specjalny typ akcji - \texttt{switch}. 
 
 \subsection{Specyfikacja}
 
