--- a/tex/3-architektura/1-wstep.tex
+++ b/tex/3-architektura/1-wstep.tex
@@ -1,6 +1,6 @@
 \subsection{Wstęp}
 
-Niniejsza sekcja przedstawia zaproponowaną w pracy architekturę  platformy, na której jest możliwe modelowanie oraz uruchamianie workflow zamkniętych pętli sterowania. Platformie nadano nazwę w celu ułatwienia jej opisu. Nazwa brzmi "Lupus". Powstała od przekształcenia angielskiego słowa "loops" oznaczającego pętle, oraz od zakotwiczenia o wyraz mający znaczenie nadające się na "maskotkę" projektu. "Lupus" po łacinie oznacza wilka, stąd w logo projektu wilk. 
+Niniejszy rozdział przedstawia zaproponowaną w pracy architekturę  platformy, na której jest możliwe modelowanie oraz uruchamianie workflow zamkniętych pętli sterowania. Platformie nadano nazwę w celu ułatwienia jej opisu. Nazwa brzmi "Lupus". Powstała od przekształcenia angielskiego słowa "loops" oznaczającego pętle, oraz od zakotwiczenia o wyraz mający znaczenie nadające się na "maskotkę" projektu. "Lupus" po łacinie oznacza wilka, stąd w logo projektu wilk. 
 
-Architektura w rozumieniu ENI jest to "zbiór reguł i metod opisujących funkcjonalność, organizację oraz implementację systemu". Niniejsza sekcja pomija aspekt implementacji, która jest omówiona w następnej sekcji. 
+Architektura w rozumieniu ENI jest to "zbiór reguł i metod opisujących funkcjonalność, organizację oraz implementację systemu". Niniejszy rozdział pomija aspekt implementacji, która jest omówiona w następnym rozdziale.
 
